1 Apr 2011:		Release 0.4 under betatesting
		- options testable in different environments
		- new hacks, scramble implemented
		- renew of TCPTrack.cc class 
		- client/service are two separate software with an internal protocol

30 Dec 2010:	Stabilized 0.4 release
		- sniffjoke-autotest generate the location file
		- plugin configuration

20 Nov 2010:	In those months, when I and evilalv3 forget the ChangeLog...
		- the hacks are supported in external plugin(s)
		- the scrambling tech is became three
		- the TTL will be refreshed and cached
		- the entire Sniffjoke logic has been optimized
		- the entire Sniffjoke OOP has been reenginereed
		- the hack/scrambling tech are more configurable by options

1 Sep 2010:	In those months, when I and evilaliv3 forgotten to update 
		the changelog, a lot of bugs have been solved.
		- best class splitting in sniffjoke, more c++ compliant
		- usage of lists and queue 
		- removed WebIO.cc and the swill library
		- supported unix socket communication and adminstration
		- locking, privileges downgrade and chroot
		- in short, when bugfix is complete this will be the 0.4,
		at the moment, this is the 0.4 alpha 2 release.

15 Apr 2009:	patch swill_file("images/visualroute.gif", 0); by dezperado
		adding xplico proof

8 Apr 2009:	patch by packz for supporting different path for
		swill library

1 Feb 2009:	stabilization of 0.3 release, 
		lack of:
			port configuration,
			statistics
			hack selection
			hack analysis

8 Jan 2009:	fixed 0.3-beta to 0.3-beta-2
		fixed includes, warnings, bugs

1 Jan 2009:	stabilization of SniffJoke 0.3 beta release
		Features available:
		swill web interface,
		standard hacks (ttl, bad checksum, innocent)
		TCP port not available
		autodetect in Linux system